[package]
name = "goxoy-tar-archive"
version = "0.1.0"
edition = "2021"
authors = ["Omer GOKSOY <goksoy.omer@gmail.com>"]
description = "Goxoy File Storage Library"
license = "MIT"
keywords = ["tar","tar-archive"]
repository = "https://github.com/Goxoy/goxoy-tar-archive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.40"